--- a/package.json
+++ b/package.json
@@ -1,58 +1,32 @@
 {
-  "name": "DevUniv",
-  "version": "1.0.0",
-  "description": "",
-  "type": "module",
+  "name": "my-webpack-project",
+  "description": "My webpack project",
+  "version": "0.0.1",
   "scripts": {
-    "ci": "pnpm install --frozen-lockfile",
-    "fi": "pnpm install --force",
-    "prepare": "husky"
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "start": "webpack serve"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.19.2",
-    "pretendard": "^1.3.9",
-    "qs": "^6.12.1"
-  },
+  "author": "ddevkim@gmail.com",
   "devDependencies": {
-    "@rune-ts/server": "^0.9.24",
-    "@types/express-serve-static-core": "^4.19.0",
-    "@types/node": "^20.11.20",
-    "@types/qs": "^6.9.15",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-boundaries": "^4.2.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@webpack-cli/generators": "^3.0.7",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.1",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "prettier": "^3.2.5",
-    "stylelint": "^16.2.1",
-    "stylelint-config-prettier-scss": "^1.0.0",
-    "stylelint-config-property-sort-order-smacss": "^10.0.0",
-    "stylelint-config-recommended-scss": "^14.0.0",
-    "stylelint-config-standard": "^36.0.0",
-    "stylelint-prettier": "^5.0.0",
-    "stylelint-scss": "^6.2.1",
-    "typescript": "^5.3.3"
-  },
-  "lint-staged": {
-    "*.scss": [
-      "stylelint --fix '**/*.scss'"
-    ],
-    "*.ts": [
-      "eslint --fix",
-      "prettier --write"
-    ]
-  },
-  "engines": {
-    "node": "20.11.1"
+    "style-loader": "^4.0.0",
+    "stylus": "^0.63.0",
+    "stylus-loader": "^8.1.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "volta": {
-    "node": "20.11.1"
+    "node": "22.1.0"
   }
 }
