--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "keynote": "node openKeynote.js"
   },
   "author": "ddevkim@gmail.com",
   "devDependencies": {
